Panel: fix for libwnck-3-0 3.24 libwnck-3-0 3.24  brings many rendering changes make lines between desktop segments nearly invisible, fix this

--- a/UbuntuStudio_Legacy/gtk-3.20/panel.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/panel.css
@@ -185,16 +185,26 @@ button#showdesktop-button, button#clock-applet-button,  button#drive-button
 /*WnckPager in both gnome-panel and mate-panel*/
 wnck-pager,
 .wnck-pager{
-	border-width: 1px 0px;
-	border-style: solid;
 	border-color: transparent;
-	background-image: linear-gradient(alpha(white,0.35),
-                                      alpha(white,0.35));
-}wnck-pager:selected,
+	border-width: 0px;
+	border-style: none;
+	background-image: linear-gradient(to bottom,
+									transparent,
+									shade(@theme_bg_color, 1.1) 5%,
+									shade(@theme_bg_color, 1.1) 95%,
+									transparent);
+}
+
+wnck-pager:selected,
 .wnck-pager:selected {
-	background-color:transparent;
-	background-image: linear-gradient(@theme_selected_fg_color,
-                                      @theme_selected_fg_color);
+	border-color: transparent;
+	border-width: 0px;
+	border-style: none;
+	background-image: linear-gradient(to bottom,
+									transparent,
+									@theme_selected_fg_color 5%,
+									@theme_selected_fg_color 95%,
+									transparent);
 }
 
 na-tray-applet {
